# ephyr-control

./: CHANGELOG.md  README.md  pyproject.toml
ephyr_control/: __init__.py  config.py  control.py
examples/: example.py  mix.client.example.json
tests/: test_ephyr_control.py
