[tool.poetry]
name = "ephyr-control"
version = "0.1.0"
description = ""
authors = ["Serhii Khalymon <sergiykhalimon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
voila = "^0.2.17"
ipywidgets = "^7.5.1"
pydantic = "^1.10.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
